--- a/pages/p1/957737.md
+++ b/pages/p1/957737.md
@@ -1,4 +1,4 @@
-### “十一”酒会全不戴口罩 四大敏感人现身 李源潮没自杀(图)
+### 中共为士兵配备自毁、遥控灭口装置惹议(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align: center;">
-  <img alt="中共国家前副主席李源潮（中间）和中共军委前副主席范长龙（右一）现身“十一”招待会。" src="https://img3.secretchina.com/pic/2020/10-1/p2786991a174192767-ss.jpg" style="width:600px"/>
+ <p style="text-align:center">
+  <img alt="近日，西藏军区研发了一款所谓的“新型单兵数字化作战系统”，据悉，该系统中设有一个自毁装置（图片来源：微博）" src="https://img3.secretchina.com/pic/2021/1-1/p2849341a339177218-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   中共国家前副主席李源潮（中间）和中共军委前副主席范长龙（右一）现身“十一”招待会。(图片来源：视频截图)
+   近日，西藏军区研发了一款所谓的“新型单兵数字化作战系统”，据悉，该系统中设有一个自毁装置（图片来源：微博）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -21,62 +21,60 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
-  【看中国2020年10月1日讯】（看中国记者林中宇综合报导）9月30日晚，中共国务院在北京举办“
+  【看中国2021年1月1日讯】（看中国记者文俪综合报导）近日，
   <strong>
-   十一
+   <span href="https://www.secretchina.com/news/gb/tag/西藏军区" target="_blank">
+    西藏军区
+   </span>
   </strong>
-  ”招待会。四大敏感人物，包括李源潮、孟建柱、范长龙和吴胜利等人均有露面，其中李源潮9月下旬曾传在家中自杀。另外，出席晚宴者无一人戴
+  研发了一款所谓的“新型单兵
   <strong>
-   口罩
+   数字化作战系统
   </strong>
-  ，由于目前还是
-  <span href="https://www.secretchina.com/news/gb/tag/武汉肺炎" target="_blank">
-   武汉肺炎
-  </span>
-  疫情期，当局这一做法令外界担忧。
+  ”，据悉，该系统中设有一个
+  <strong>
+   自毁装置
+  </strong>
+  ，称如果士兵负重伤但又不想被俘，可以自行启动自毁装置，也可以由指挥官遥控启动。网友惊呼：“这玩意儿不就是人肉炸弹么？什么组织能把人变成机器，而且是炮灰机器！”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  9月30日晚，中共国务院在北京大会堂举行“十一”招待会。官方报导称，
-  <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-   习近平
+  据党媒观察者网12月27日报导，近日西藏军区为士兵装备了一款“新型单兵
+  <span href="https://www.secretchina.com/news/gb/tag/数字化作战系统" target="_blank">
+   数字化作战系统
   </span>
-  等7常委和王岐山等中共高层与近500名中外人士出席招待会。
+  ”，范围包括特种部队、普通班组步兵、炮兵、陆航、装甲兵等。
  </p>
  <p>
-  中共央视用了8分钟来播报这个招待会，出席名单中包括“从领导职务上退下来的政治老人”，但现场并没有看到胡锦涛、温家宝、
-  <span href="https://www.secretchina.com/news/gb/tag/江泽民" target="_blank">
-   江泽民
-  </span>
-  、李鹏、朱镕基、曾庆红等一众中共元老的镜头。
+  据称，这套所谓的单兵“数字化作战系统”在头盔上设置了一个卫星天线，并配属一个单筒夜视多功能目镜，手臂上还有一个数控终端。护具方面更是功能多样化，除了提供防弹保护外、还包括导航仪、单兵电台、摄像模块、音频转换器、信息处理和供电模块。
  </p>
  <p>
-  另有四大敏感人物则齐齐现身。视频显示，丑闻缠身的原政治局委员兼政法委书记孟建柱，以及原军委委员、海军司令员吴胜利、前国家副主席
-  <span href="https://zh.wikipedia.org/zh-hans/%E6%9D%8E%E6%BA%90%E6%BD%AE" target="_blank">
-   李源潮
+  但，其中令人更为关注震惊的是，这套系统设有
+  <span href="https://www.secretchina.com/news/gb/tag/自毁装置" target="_blank">
+   自毁装置
   </span>
-  和前军委副主席范长龙等人，均出现在镜头中。
+  。
  </p>
  <p>
-  69岁的李源朝身旁，是久未露面的范长龙，央视镜头慢慢从左到右转移，镜头在两人身上停留4至5秒时间。
+  报导称，如果士兵负重伤但又不想被
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E4%BF%98%E8%99%8F" target="_blank">
+   俘虏
+  </span>
+  ，可以启动自毁装置，这样做既能能维护军人的尊严，也使敌方无法获得该套系统的任何信息。此外，若指挥官在屏幕上发现士兵与其他部队拉远了距离，但又无法联络到该名落单的士兵，也会启动自毁。
  </p>
  <p>
-  范长龙一度传出被调查，此后很少露面。而上月
-  <span href="https://www.secretchina.com/news/gb/tag/李源潮" target="_blank">
-   李源潮
-  </span>
-  曾被海外网络传出在家中自杀。
+  报导指，该系统还能够“一键引导炮击，印军捡获就自毁，所有单兵信息全在指挥屏幕内。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -91,7 +89,7 @@
   </div>
  </center>
  <p>
-  YouTube帐号“方位观察”在9月21日曾爆出李源潮自杀消息，并称自己与李源潮有一面之缘。35年前，他本人曾获得一项文学奖，颁奖人正是李源潮。他说，自己对李源潮很有好感，收到消息，想对李源潮以及家人表达哀悼之情，同时“希望消息是假消息”。
+  对此，网友怒斥：
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -106,7 +104,7 @@
   </div>
  </center>
  <p>
-  李源潮同时具有“太子党”、“共青团”、“江苏帮”等多重身份。曾被指涉嫌与同是团派大佬的原中办主任令计划搞“团团伙伙”。近年已多次传出被查和自杀消息。
+  “这是灭绝人性的手段，比纳粹还要野蛮！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,11 +119,7 @@
   </div>
  </center>
  <p>
-  另外，本次“
-  <span href="https://www.secretchina.com/news/gb/tag/十一" target="_blank">
-   十一
-  </span>
-  ”晚宴，出席的中共领导人与近500位中外人士，无一人戴口罩，由于武汉肺炎疫情仍在全球蔓延，众多人齐聚参与宴会明显会增加疫情传播风险。甚至有人担心，这种聚会可能重演武汉万家宴的悲剧。
+  “真要有自毁装置那就真的邪恶到无法形容了……希特勒似乎也不会这样吧。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -140,7 +134,7 @@
   </div>
  </center>
  <p>
-  万家宴悲剧是指1月18日，武汉市在百步亭社区举办有4万多户家庭参加的“万家宴”，当时武汉已经出现了疫情，很多工作人员都曾建议过取消举办万家宴，但当局隐瞒疫情，并对外宣称不会“人传人”。
+  “最终成为人肉炸弹。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -155,11 +149,7 @@
   </div>
  </center>
  <p>
-  万家宴中，一些歌颂中共的主题菜被高调展出，其中包括“庆祝新
-  <span href="https://www.secretchina.com" target="_blank">
-   中国
-  </span>
-  成立70周年”主题菜、“武汉军运会赛事菜”，向党表忠心、为党歌功颂德菜。武汉几个党媒把举办宴会的情形和照片，放上头条刊登，强调国民一片歌舞升平。
+  “这个太狠了，远离队伍，由指挥官引爆。这是典型的为以后作战搞得控制技术，怕士兵逃跑，装死，叛变，总之不肯做炮灰。诅咒共产邪教10000遍，赶紧下地狱。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -178,12 +168,71 @@
   </ins>
  </center>
  <p>
-  湖北地方报纸《楚天日报》当时介绍说，
-  <span href="https://www.secretchina.com/news/gb/tag/%E4%B8%87%E5%AE%B6%E5%AE%B4" target="_blank">
-   万家宴
+  “以前共军让每个士兵要留一个手榴弹给自己，被俘前拉响和敌人同归于尽，还美其名曰叫“光荣弹”，真他妈的没有人性，把党性看的比人性人命还重要！这就是一个邪教组织！”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  此外，报导还宣称，按照军队现有的装备发展方向，很可能会首先动用特种部队渗透到印军后方，寻找印军的高价值目标，然后呼唤炮兵群发起急袭。对此，网友表示，这下中共把朝鲜战争的“向我开炮”用高科技实现了，至于渗透到印军后方的炮灰的死活，根本就不在中共的考虑范围之内。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  对于中共视人命如草芥的行为，有网友在网络发文‘美国军人的投降书’来做比较：“美国大兵在出发前，美国政府给每一个美国军人准备了一个用十几种文字印制的投降书备在身上。战场上，一旦寡不敌众，为了保护军人的生命，军人可以举起出这份投降书，请求按照国际惯例给予生命保护。”网友表示，这是以人为本的精神体现、很好，应该这样！珍惜生命以人为本！尊重生命。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <blockquote class="twitter-tweet">
+  <p dir="ltr" lang="zh">
+   对此一下『美国军人的投降书』。美国大兵在出发前，美国政府给每一个美国军人准备了一个用十几种文字印制的投降书备在身上，战场上，一旦寡不敌众，为了最大限度地保护军人的生命，军人可以举起出这份投降书，请求按照国际惯例给予生命保护。这是以人为本的精神体现。
+  </p>
+  <center>
+   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+    </div>
+   </div>
+   <div>
+    <center>
+     <div id="div-gpt-ad-1589559869784-0">
+     </div>
+    </center>
+   </div>
+  </center>
+  — 除恶政，救中华！ (@WS20191)
+  <span href="https://twitter.com/WS20191/status/1344714103340867584?ref_src=twsrc%5Etfw">
+   December 31, 2020
   </span>
-  有13000多个菜，使用的盘子上都印上了习近平的头像，多位参加者克服了发烧，头疼等症状而出席了宴会。
- </p>
+ </blockquote>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -197,58 +246,20 @@
   </div>
  </center>
  <p>
-  结果，2月4日，中国社交媒体上开始流传武汉江岸区百步亭社区“疫情大爆发，微信截图消息称包括安居苑、百合苑等多个小区100多名居民出现发热症状。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  此后武汉疫情迅速扩散到全世界，给世界各国民众的健康、生活、经济、政治、文化带来巨大损害。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  法国媒体《解放报》报导，武汉市政府在明知病毒人传人的情况下，依然举办为
-  <span href="https://www.secretchina.com/news/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3" target="_blank">
-   习近平
+  来源:
+  <span href="/news/gb/tag/看中国  ">
+   看中国
   </span>
-  歌功颂德的“万家宴”，这是
-  <strong>
-   中共病毒
-  </strong>
-  扩散的元凶。
  </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb419N"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
+ </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
   <br/>
@@ -267,45 +278,33 @@
   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
   <center>
    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
+    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-    <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-    </div>
-   </div>
-   <div>
-    <center>
-     <div id="div-gpt-ad-1589559869784-0">
-     </div>
-    </center>
-   </div>
-  </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/947862.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/947862.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p2/947862.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/10/01/947862.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957737.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957737.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/957737.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/01/957737.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p2/947862.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/957737.md' width='0px' height='0px'/>
