--- a/pages/p3/957677.md
+++ b/pages/p3/957677.md
@@ -1,4 +1,4 @@
-### 天道好还 放长双眼看未来(图)
+### 小夫妻移民大温年薪6万 却比赚20万还爽(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,9 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align:center">
-  <img alt="川普和拜登" src="https://img3.secretchina.com/pic/2020/11-1/p2808333a55547659-ss.jpg" style="height:399px; width:600px"/>
+  <img alt="温哥华 移民 香港" src="https://img3.secretchina.com/pic/2021/1-1/p2848691a107551850-ss.jpg" style="height:400px; width:600px"/>
   <br>
-   川普和拜登（图片来源：ANGELA WEISS SAUL LOEB/AFP/Getty Images）
+   温哥华（图片来源：PIXABAY)
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,93 +29,45 @@
   </div>
  </div>
  <p>
-  【看中国2020年11月7日讯】昨日文章贴出后，有朋友提出质疑，他说：“既然‘美中争夺世界，有根本的利害冲突，
+  【看中国2021年1月1日讯】“在这里就算赚最低时薪，也能生活得很开心。”一对从
   <strong>
-   美国总统
-  </strong>
-  换人，对台海、南海、香港新疆西藏内蒙的大政方针，再变也变不到哪里去。’，那么，说‘
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/川普" target="_blank">
-    川普
+   香港
+   <span href="https://www.secretchina.com/news/gb/tag/移民" target="_blank">
+    移民
    </span>
-   (特朗普)
   </strong>
-  与
+  到
   <strong>
-   拜登
+   温哥华
   </strong>
-  之对立，是两种思潮、两个阵营、两种命运之争’似乎逻辑上未讲得通。”
+  的小夫妻，日前在接受香港苹果日报采访时表示：“在温哥华，即便是只赚1小时12加币的最低工资，也能生活得很幸福，很滋润。”
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  认真想一下，真的是逻辑有点问题。朋友后来又说：“问题似乎出在‘川普与
-  <span href="https://www.secretchina.com/news/gb/tag/拜登" target="_blank">
-   拜登
+  移民
+  <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+   加拿大
   </span>
-  之对立，是两种思潮、两个阵营、两种命运之争’过份绝对化。”
+  的生活，对于每个人来说，感觉也许因人而异。有华人曾抱怨，在全加生活成本最高的温哥华，赚了再多的钱都不够花。甚至曾有人发帖算账，说夫妻俩年薪20万在温哥华都没法享受生活。不过，最近，香港的苹果日报采访了一对从香港移民温哥华的小夫妻，两人竟表示，在温哥华，即便只赚1小时12加币的最低工资，但却感觉过着“神仙般”的生活。
  </p>
  <p>
-  认真想一下，朋友又一语点中要害。
- </p>
- <p>
-  基本上，两种想法都在我脑子里，前一个说法是基本判断，后一个说法也是基本判断，
- </p>
- <p>
-  “两种思潮、两个阵营”之争也没错，错在“两种命运”之争，正如朋友提醒的，过份“绝对化了”。也就是说，问题没有那么严重，说川普与拜登之争是两种思潮两个阵营之争，这是现实，无须争辩，但说到两种命运之争，就太拔高了，把问题看得太严重，严重到脱离现实。
- </p>
- <p>
-  如果去掉“两种命运”之争，那前后两句话就没有逻辑问题，但主观上就会觉得不够“解气”，一定要把它提升到更严重的地步，才足以表达我对拜登的讨厌。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  写文章当然不应该受制于自己的主观情绪，但人有情绪，有时又难以避免。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  不管如何，很感谢朋友的提醒，这种朋友才叫做“诤友”。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <span href="https://www.secretchina.com/news/gb/tag/美国总统" target="_blank">
-   美国总统
+  报导称，
+  <span href="https://www.secretchina.com/news/gb/tag/香港" target="_blank">
+   香港
   </span>
-  大选难解难分，牵动全世界人心，拜登与川普之争，的确是两种思潮、两个阵营之争，但美国的民主制度行之百年，有稳固的基础，一切争议都可以在法律框架内得到解决。共和民主两党分属自由和保守两翼，代表不同的社会思潮和利益集团，有矛盾斗争也属正常，但我相信他们最终会找到解决纷争的办法，美国还是美国，美国人还是美国人。
+  女子Kiwi今年27岁，10年前来加拿大留学，与温哥华这座城市结下了命中注定的缘分。毕业后，深深惧怕香港工作压力的她，选择留在生活节奏悠闲的温哥华。
+ </p>
+ <p>
+  “在香港真的有很大压力，上班下班都不定时。我很怕那种，整个生命都奉献给你的工作。”Kiwi说。
+ </p>
+ <p>
+  而在温哥华，Kiwi就觉得轻松多了，就算只赚最低工资12加元每小时，也能租得起450呎的单位了。
+ </p>
+ <p>
+  Kiwi的先生Jonathan也表示，温哥华与香港相比，会让人“更有空间去生活”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -130,7 +82,7 @@
   </div>
  </center>
  <p>
-  拜登一旦当选，他会不会受制于中共，会不会被中共勒索，而实施与川普截然相反的亲中政策，这是最令各国政府和人民担心的事。我之所以说“再变也变不到哪里去”，理由是美国百分七十以上国民对中共反感，民主共和两党在参众两院对华关系的众多法案中，基本上都有共识，此外，这半年多来蓬佩奥全世界游说，已经让众多盟友归队，又拉拢了更多中小国家围堵中共，美国的基本国策，不会因为一个拜登被中共收买而全然改观，反而拜登当选后，他要受国内基本民意和自己党内政治取向的约束。
+  现在，夫妇俩都做着着朝九晚五的工作，不必加班，每个月也有7500加元的收入，两人年薪加起来有9万刀，住在温哥华一间宽敞明亮的公寓里。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -145,7 +97,7 @@
   </div>
  </center>
  <p>
-  因此说是“两种命运”之争，便过于夸大了拜登个人的意志，而忽略了整个国家的传统和利益。始终美国以普世价值立国，整个西方资本主义社会也有共同的价值观，这一两年来，中共的丑恶面目在全世界人面前大暴露，各国人民对中共的猜忌和反感无日无之，面对这种时代趋势，拜登不可能以一人之力去扭转，只有他服从民意和趋势，不可能他去逆转民意和趋势。因此说“两种命运”之争，显然过于夸大其词了。在文字上看来，当然比较过瘾，但脱离了现实，也就缺乏说服力。
+  不过，夫妻俩也吐槽了一下加拿大的重税机制——税前7500的工资，税后就只剩下了5000，也就是每年6万，直接没了1/3。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -160,7 +112,97 @@
   </div>
  </center>
  <p>
-  朋友后来又转了沈旭晖博士一篇文章给我，标题是“真相与后真相：美国点票入门的九点懒人包”。沈博士果然是内行人，他对美国选举的分析很到位，有兴趣的网友可以找来读读。其实我自己对国际政治和美国政情都没有深入研究，只是平日阅读得来的一些常识，凭此作分析，以印象居多，当然不可能深入，再加上个人好恶，犯错的机会也不少。
+  好在，虽然交的税多，但享受到的政府福利也一点不少。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “看医生，配药，针灸，配眼镜，保险都包了。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “买一个政府的保险，当你真的有大病的时候，比如癌症，费用政府都会涵盖，完全没有后顾之忧。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  众多福利中，Kiwi最喜欢的就是加拿大的产假制度。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  “这里的产假有1年到1年半，休假期间也能领工资，特别好。”
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  不过，这对华人小夫妻如今在温哥华的安定生活也并不是一蹴而就的。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  2014年，Kiwi拿了毕业工签后，心心念念想着工作一段时间后就可以办理PR了，结果却发现不是每家公司都愿意帮忙担保。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -179,7 +221,7 @@
   </ins>
  </center>
  <p>
-  平常也有网友坦率指出我的错误，我多数都可以接受。不过昨日有一位网友说我挺拜登，这个误会就太大了。坦白说，对自由派与保守派之争，我当然倾向自由派多一点，但拜登在美中关系上太苟且，又分明中了中共利益收买的奸计，作为香港人，我对拜登的姑息养奸很反感，说我挺拜登，几乎是对我的一种侮辱，因此一定要加以说明。
+  “我的前两份工作都是直接讲明白了，说不会帮我担保。”Kiwi说。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -194,7 +236,7 @@
   </div>
  </center>
  <p>
-  我支持川普，最主要原因就是从来没有一个美国总统，敢于正面直接、毫无保留地直斥中共之非，敢于和中共翻脸，敢于与他脱钩，敢于重整国际秩序去围堵中共，削弱中共。川普做的，就是我想做的，做不做得到是另一回事，至少要去做出来。
+  不过，上天对Kiwi很不错，在Kiwi努力找可以让自己移民的全职工作时，就遇见了现在的老公。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -209,7 +251,7 @@
   </div>
  </center>
  <p>
-  川普落选，我们也要接受现实，但我相信拜登也不敢全面扭转当下恶劣的美中关系，最多只是不如此剑拔弩张而已，长远的冲突不可逆转。拜登出卖美国人，四年后他就要被美国人抛弃，到时候，就等蓬佩奥再来拨乱反正好了。
+  Jonathan是加拿大国籍，两人2016年结婚后，Kiwi就通过家庭团聚顺利申请移民了。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -224,7 +266,7 @@
   </div>
  </center>
  <p>
-  天要下雨，娘要嫁人，世事不可能永远一帆风顺，但天道好还，善恶有报，且让我们放长双眼看未来。
+  Kiwi表示，自己最不喜欢压力，喜欢自由。现在在温哥华工作和生活，她可以整晚画画，听歌，无忧无虑，这对她来说，就已经是“神仙般”的日子。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -239,11 +281,7 @@
   </div>
  </center>
  <p>
-  （文章由作者授权转载自
-  <span href="https://www.facebook.com/nganshunkau" target="_blank">
-   颜纯钩facebook脸书专页
-  </span>
-  ）
+  这对来自香港的90后小夫妻，做着一份不算太辛苦的工作，赚着足够生活的薪水，或许没有大富大贵，或许没有开豪车住豪宅，但夫妻恩爱，吃穿住行无虞，每天都过得很开心。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -257,28 +295,23 @@
    </center>
   </div>
  </center>
- (文章仅代表作者个人立场和观点)
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  他们身上，或许有很多本地华人移民家庭的影子。相信大温很多华人移民，赚的钱比这对夫妻更多，生活水平也更高，但有时候，却可能忘了如何像他们这样知足，开心……
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  新的一年即将到来，愿所有的华人朋友们，都能在异国他乡，找到属于自己的平安喜乐。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -291,6 +324,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:江雪
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb418P"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -308,13 +375,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951718.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951718.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p4/951718.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/07/951718.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/957677.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/957677.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p3/957677.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/01/957677.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p4/951718.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p3/957677.md' width='0px' height='0px'/>
