--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113772,4 +113772,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01012001)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01012051)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
