--- a/pages/nsc418/n12659462.md
+++ b/pages/nsc418/n12659462.md
@@ -5,7 +5,7 @@
 
 
 
-<div><img alt="【疫情更新1·1】威州药剂师破坏疫苗而被捕" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/CP113682852-600x400.jpg"/>
+<div><img alt="【疫情更新1·1】威州药剂师破坏疫苗被捕" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/CP113682852-600x400.jpg"/>
 <div class="caption">
  图为Moderna研发的中共病毒（武汉肺炎）疫苗。（Rogelio V. Solis／加通社）
 </div></div><hr/>
