--- a/pages/nsc418/n12659462.md
+++ b/pages/nsc418/n12659462.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1·1】威州药剂师破坏疫苗被捕" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/CP113682852-600x400.jpg"/>
+<div><img alt="【疫情更新1·1】全球疫情阴影下迎新年" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1293912576-600x400.jpg"/>
 <div class="caption">
- 图为Moderna研发的中共病毒（武汉肺炎）疫苗。（Rogelio V. Solis／加通社）
+ 12月31日，全球在疫情阴影下迎来2021年。图为英国Newcastle地区的新年烟花。(Ian Forsyth/Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
