--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113784,4 +113784,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01012201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01012251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
