--- a/pages/nsc418/n12659462.md
+++ b/pages/nsc418/n12659462.md
@@ -84,6 +84,14 @@
 <h3>
  消息：印度药品监管机构批准该国首个阿斯利康中共病毒疫苗
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12569959" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229653997.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12569959" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-1229653997-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  有消息说，印度药品监管机构2021年1月1日批准该国首个阿斯利康（AstraZeneca）和牛津大学（Oxford University）开发的中共病毒疫苗。（JUSTIN TALLIS/AFP via Getty Images）
+ </figcaption><br/>
+</figure><br/>
 <p>
  两名知情人士告诉路透社，印度药品监管机构周五（1月1日）批准由阿斯利康（AstraZeneca）和牛津大学（Oxford University）开发的一种疫苗，用于紧急应对中共病毒。
 </p>
@@ -105,6 +113,14 @@
 <h3>
  放球迷进赛场却禁止室内用餐 库默备受饭店业主指责
 </h3>
+<figure class="wp-caption aligncenter" id="attachment_12379520" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2020/09/428e1885a989729581b5a5bbcbfb2091.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12379520" src="https://i.epochtimes.com/assets/uploads/2020/09/428e1885a989729581b5a5bbcbfb2091-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  图为纽约州长安德鲁·库默（Andrew Cuomo）。（资料图）（Kevin P. Coughlin / Office of Governor Andrew M. Cuomo）
+ </figcaption><br/>
+</figure><br/>
 <p>
  纽约州长安德鲁·库默（Andrew Cuomo）宣布数千名球迷获许观看布法罗·比尔（Buffalo Bills）球队即将举行的季后赛，而许多企业却仍然被迫关门。库默因此受到饭店老板们指责。
 </p>
