--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113829,4 +113829,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01020551)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01020601)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
