--- a/pages/nf4514/n12659462.md
+++ b/pages/nf4514/n12659462.md
@@ -41,6 +41,25 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 英媒：到一月中 英每周将供应约200万剂疫苗
+</h3>
+<p>
+ 据《泰晤士报》（The Times）报导，到1月中旬，英国每周将供应约200万剂由牛津大学和阿斯利康公司（AstraZeneca）开发的
+ <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
+  中共病毒
+ </ok>
+ 疫苗。
+</p>
+<p>
+ 该报援引牛津-阿斯利康团队一位未具名成员的话说，阿斯利康希望到下周将总共提供两百万剂疫苗。报导补充说：“然后，该计划将很快增加（疫苗供应量）——到1月的第三周，我们应该会达到每周（供应）200万剂。”
+</p>
+<p>
+ 此前，英国周三批准了牛津-阿斯利康疫苗，希望迅速采取行动将有助于遏制由一种传染性很强的变种病毒所引起的创纪录的感染激增。
+</p>
+<p>
+ 作为与阿斯利康公司达成的协议的一部分，首相约翰逊（Boris Johnson）为英国订购了1亿剂疫苗。该公司曾表示，计划在第一季度提供数百万剂，并补充说，预计首次疫苗接种将于今年开始。
+</p>
+<h3>
  英新增逾5.3万病例 连续第四天超过5万
 </h3>
 <p>
@@ -48,6 +67,24 @@
 </p>
 <p>
  英国还录得613例新增死亡病例。
+</p>
+<blockquote class="twitter-tweet">
+ <p dir="ltr" lang="en">
+  The number of coronavirus cases in the UK has risen by 53,285, with 613 more deaths recorded
+  <ok href="https://t.co/7CiFnzqCDP">
+   https://t.co/7CiFnzqCDP
+  </ok>
+ </p>
+ <p>
+  — Sky News (@SkyNews)
+  <ok href="https://twitter.com/SkyNews/status/1345040804503543810?ref_src=twsrc%5Etfw">
+   January 1, 2021
+  </ok>
+ </p>
+</blockquote>
+<p>
+ <br/>
+ 周四，英国报告新增55,892例确诊病例和964例死亡病例，均高于周五的两项新增数。
 </p>
 <h3>
  巴西染疫身亡人数突破19.5万
@@ -99,11 +136,7 @@
  迄今，法国确诊病例数累计达2,639,773，位居世界前列；染疫身亡人数新增133人，累计达64,765人。
 </p>
 <h3>
- 发现15例
- <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
-  中共病毒
- </ok>
- 变种病例 土耳其禁英旅客入境
+ 发现15例中共病毒变种病例 土耳其禁英旅客入境
 </h3>
 <p>
  土耳其卫生部长宣布，在发现15例中共病毒变种病例后，该国暂时禁止来自英国的旅客入境。
