--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113868,4 +113868,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01021201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01021251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
