--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113898,4 +113898,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01021701)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01021751)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
