--- a/pages/nf4514/n12661914.md
+++ b/pages/nf4514/n12661914.md
@@ -15,7 +15,7 @@
 #### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 <div><p>
- 【大纪元2021年01月02日讯】（大纪元记者陈霆综合报导）新一波的
+ 【大纪元2021年01月02日讯】（大纪元记者陈霆、李言综合报导）新一波的
  <ok href="https://www.epochtimes.com/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.html">
   中共病毒
  </ok>
@@ -41,6 +41,28 @@
 <h4>
  以下是有关病毒疫情的实时更新：
 </h4>
+<h3>
+ 荷兰将尽快为紧急护理人员接种疫苗
+</h3>
+<p>
+ 路透社报导，荷兰卫生部周六（1月2日）表示，荷兰将尽快为30,000名紧急护理人员接种疫苗。该国政府因疫苗接种落后于其它欧盟国家而受到抨击。
+</p>
+<p>
+ 政府此前曾表示，其全国疫苗接种活动将于1月8日开始，是欧盟最晚启动疫苗接种的国家。
+</p>
+<p>
+ 最初的疫苗计划送给老人院的医护人员、家庭护理护士和在残疾人护理院工作的人，而不是急救人员。
+</p>
+<p>
+ 尚不清楚这些人员何时接种疫苗。该部表示，它将在下周一提供更多细节。
+</p>
+<p>
+ 中共病毒（
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+  武汉肺炎
+ </ok>
+ ）病例激增，工会和医院一直在呼吁一线护理人员迅速接种疫苗。
+</p>
 <h3>
  美国元旦新增16万病例
 </h3>
