--- a/pages/nf4514/n12661914.md
+++ b/pages/nf4514/n12661914.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.2】美国元旦增16万新病例" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230381023-600x400.jpg"/>
+<div><img alt="【疫情更新1.2】美国单日新增16万例" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012290553272124-600x400.jpg"/>
 <div class="caption">
- 纽约市跨年夜时，空旷时代广场上，纸片于空中纷飞。根据约翰·霍普金斯大学的数据，美国于元旦增加16万起确诊病例。 (COREY SIPKIN/AFP via Getty Images)
+ 12月28日，纽约时代广场等待迎接除夕活动。(ANGELA WEISS/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
@@ -42,6 +42,65 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 弗吉尼亚州参议员染疫去世 享年60岁
+</h3>
+<p>
+ 据报道，弗吉尼亚州60岁的共和党州参议员本·查芬（Ben Chafin）感染中共病毒（
+ <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+  武汉肺炎
+ </ok>
+ ）死亡。其办公室周五（1月1日）晚间证实，该参议员因感染并发症死亡。
+</p>
+<p>
+ 据里士满（Richmond）WRIC-TV报道，来自拉塞尔县（Russell County）黎巴嫩（Lebanon）的参议员查芬于当天早些时候去世。在过去两周里，他一直在里士满VCU医疗中心接受治疗。
+</p>
+<p>
+ 一些州议员在社交媒体上悼念查芬。
+</p>
+<p>
+ 共和党参议员托德·皮利恩（Todd Pillion）在
+ <ok href="https://twitter.com/ToddPillionVA/status/1345177850576576516?ref_src=twsrc%5Etfw%7Ctwcamp%5Etweetembed%7Ctwterm%5E1345177850576576516%7Ctwgr%5E%7Ctwcon%5Es1_&amp;ref_url=https%3A%2F%2Fwww.foxnews.com%2Fpolitics%2Fben-chafin-virginia-state-senator-dead-at-60-from-coronavirus" rel="noopener noreferrer" target="_blank">
+  推特
+ </ok>
+ 上写道：“阿曼达（Amanda）和得知我们亲爱的朋友参议员本·查芬（Ben Chafin）去世后，心都碎了。本爱热爱生活、他的家人，他的工作以及西南弗吉尼亚州的人们，为此他孜孜不倦地倡导。”
+</p>
+<p>
+ “听闻我们的朋友和同事、参议员本·查过世，”共和党州参议员以色列·奥奎因（Israel O’Quinn）写道：“对于SWVA（西南弗吉尼亚州）及其家人来说，这是一个巨大损失，我们所有人都需要为他们继续祈祷。”
+</p>
+<p>
+ 查芬是弗吉尼亚人，自2014年9月以来一直在州参议院任职。此前他曾在该州众议院任职。
+</p>
+<h3>
+ 日本考虑宣布进入新一轮紧急状态
+</h3>
+<p>
+ 日本流行病应对负责人周六（1月1日）表示，首都地区敦促采取行动应对创纪录的COVID-19病例激增。日本将考虑发布新一轮紧急声明。
+</p>
+<p>
+ 路透社报导，东京于12月17日将其中共病毒警报级别提高至最高水平。12月31日，首都新增感染病例达到创纪录的1,337例，周六为814例。12月31日也创下全国记录，新增4,520起案件。
+</p>
+<p>
+ 东京圣卢克国际医院（St Luke’s International Hospital）感染控制经理坂本富美（Fumie Sakamoto）表示，COVID-19（中共病毒引发的疾病）病例增加加剧了住院治疗的季节性增长。
+</p>
+<p>
+ 日本经济大臣西村康俊（Yasutoshi Nishimura）在与东京都知事小池百合子（Yuriko Koike）和来自三个邻县的领导人会晤后对记者说，在决定进入新一轮紧急状态前，政府需要咨询健康专家。
+</p>
+<p>
+ 西村说：“日本中央政府和三位知事都认为东京地区的局势越来越严重，因此可能需要紧急声明。”
+</p>
+<p>
+ 他说，作为一项临时措施，将要求东京地区的餐馆和卡拉OK厅在晚上8点关闭，而提供酒精饮料的公司应在晚上7点关门。
+</p>
+<p>
+ 日本首相菅义伟（Yoshihide Suga）拒绝恢复国家紧急状态的呼吁。该国政府曾在大流行前一波浪潮中于4月份进入国家紧急状态。菅义伟计划于1月4日公开演讲。
+</p>
+<p>
+ “国家紧急状态”意味着在自愿的基础上关闭企业和限制旅行，而不是像欧洲和美国部分地区那样采取严格的封锁措施。
+</p>
+<p>
+ 坂本说：“日本政府在控制感染方面做的事情尚不是很多。”“我预计未来几天（感染）人数会越来越大。紧急声明应该早一些推出，大概在12月或11月期间。”
+</p>
+<h3>
  荷兰将尽快为紧急护理人员接种疫苗
 </h3>
 <p>
@@ -57,11 +116,7 @@
  尚不清楚这些人员何时接种疫苗。该部表示，它将在下周一提供更多细节。
 </p>
 <p>
- 中共病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
-  武汉肺炎
- </ok>
- ）病例激增，工会和医院一直在呼吁一线护理人员迅速接种疫苗。
+ 中共病毒（武汉肺炎）病例激增，工会和医院一直在呼吁一线护理人员迅速接种疫苗。
 </p>
 <h3>
  美国元旦新增16万病例
@@ -270,6 +325,10 @@
 <p>
  责任编辑：叶紫微
 </p>
+<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 391.812px; width: 263.734px; height: 19px;">
+</div>
+<div class="jfk-bubble gtx-bubble" style="visibility: visible; left: 127px; top: 421px; opacity: 1;">
+</div>
 </div>
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
