--- a/pages/nsc418/n12661914.md
+++ b/pages/nsc418/n12661914.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.2】美国单日新增16万例" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012290553272124-600x400.jpg"/>
+<div><img alt="【疫情更新1.2】英国连续五天日增5万" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230391585-600x400.jpg"/>
 <div class="caption">
- 12月28日，纽约时代广场等待迎接除夕活动。(ANGELA WEISS/AFP via Getty Images)
+ 图为1月2日，伦敦救护人员将中共病毒患者送往伦敦一家医院。(Photo by DANIEL LEAL-OLIVAS/AFP via Getty Images)
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
