--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -113952,4 +113952,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01030201)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01030251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
