同步于: 1月3日4时52分

--- a/pages/nf4514/n12661914.md
+++ b/pages/nf4514/n12661914.md
@@ -42,6 +42,84 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
+ 俄罗斯为超过80万人接种 并颁发证书
+</h3>
+<p>
+ 路透社报导，俄罗斯卫生部长米哈伊尔·穆拉什科（Mikhail Murashko）周六（1月2日）表示，迄今为止，该国已有80万人做了新冠病毒（中共病毒）接种，已发放150万剂疫苗。
+</p>
+<p>
+ 俄罗斯于2020年12月初推出Sputnik V疫苗，目前其COVID-19（中共病毒引发的疾病）病例数量已跃居世界第四，俄罗斯对其计划生产的几种疫苗寄予厚望。
+</p>
+<p>
+ 塔斯社（TASS）援引穆拉什科的话说，从1月1日起，在俄罗斯接种疫苗的人将获得疫苗接种电子证书。该部为已经接种过疫苗的俄罗斯人建立了数据库。
+</p>
+<p>
+ 该疫苗分两次使用，剂量不同，前后两次施打间隔21天。
+</p>
+<p>
+ 俄罗斯已经开始向其它国家提供同一疫苗。该国上周向阿根廷发送了30万剂这种疫苗。这在国内引发争议，有些人认为应向国内提供更多疫苗。
+</p>
+<p>
+ 根据周六的数据，俄罗斯在过去24小时内新增26,301例感染，总病例数达到3,212,637例。
+</p>
+<p>
+ 当局说，过去24小时内有447人死亡，官方的死亡数字达到58,002人。
+</p>
+<h3>
+ 意大利周六新增11,831例感染、364例死亡
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12662500" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230372417.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12662500" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230372417-600x400.jpg"/>
+ </ok>
+ <br/><figcaption class="wp-caption-text">
+  2020年12月31日，中共病毒（
+  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+   武汉肺炎
+  </ok>
+  ）大流行之际，意大利圣菲利波内里医院（San Filippo Neri Hospital）的医务人员在病房庆祝新的一年 。(Antonio Masiello/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 卫生部说，意大利周六（1月2日）新增364例中共病毒（武汉肺炎）相关死亡报告，前一天这一数字为462例；新增感染也从前一天的22,211例下降至11,831例。而新年当天的测试远远低于正常水平。
+</p>
+<p>
+ 卫生部表示，过去一天仅做了67,174次拭子测试，低于之前的157,524次。
+</p>
+<p>
+ 自2020年2月21日疫情爆发以来，意大利已记录74,985例COVID-19（中共病毒引发的疾病）死亡，为欧洲最高，也是世界第五高。卫生部表示，迄今为止，该国报告了214.1万病例。
+</p>
+<p>
+ 周六住院的染疫患者为22,948例，较前一天增加126例。重症监护病房新增134例，而周五这一数字为145例。
+</p>
+<p>
+ 目前，重症监护病房增加16人，达到2,569人。也就是说，有一些患者告不治或康复离开（重症室）。
+</p>
+<p>
+ 第二波疫情于11月上半旬迅速在该国兴起——住院人数每天增加约1,000，而重症监护室每天增加约100人。
+</p>
+<h3>
+ 社会学家预测大流行后“20年代”
+</h3>
+<p>
+ 耶鲁大学教授、社会学家和医师尼古拉斯·克里斯塔基斯（Nicholas Christakis）认为，我们尚未摆脱中共病毒（武汉肺炎）大流行阴影，但即将出现咆哮的“20年代反弹”。
+</p>
+<p>
+ 克里斯塔基斯告诉CNN，这将需要时间。
+</p>
+<p>
+ 他说，瘟疫对人类来说并不新鲜，问题是该病毒“对我们来说是新手。”
+</p>
+<p>
+ 他预测，到2022年初，我们将实现群体免疫，大部分人口将接种疫苗，但“要从社会、心理和经济冲击中恢复过来，仍然需要一些时间。”
+</p>
+<p>
+ 因此，克里斯塔基斯表示，到2023年底，世界将进入大流行后年代，“所有在目前受到病毒限制的这些……经历将逆转。”
+</p>
+<p>
+ 他说，以史为鉴，那么将会出现的局面就是所有受困于疫情的人将不厌其烦地去夜总会和酒吧以及政治集会、体育赛事和音乐会等寻求社会机会。
+</p>
+<h3>
  马来西亚日增病例持续超过2,000例
 </h3>
 <p>
@@ -104,11 +182,7 @@
  格雷厄姆支持川普2,000美元的纾困支票
 </h3>
 <p>
- 参议院多数党领袖和其他参议院共和党人反对在最新一轮的中共病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
-  武汉肺炎
- </ok>
- ）救助方案中向美国民众发放更大金额的纾困支票。此前川普总统呼吁向受疫情影响的美国人提供2,000美元的直接付款。南卡罗来纳州共和党参议员林赛·格雷厄姆（Lindsey Graham）表示支持川普总统的做法。
+ 参议院多数党领袖和其他参议院共和党人反对在最新一轮的中共病毒（武汉肺炎）救助方案中向美国民众发放更大金额的纾困支票。此前川普总统呼吁向受疫情影响的美国人提供2,000美元的直接付款。南卡罗来纳州共和党参议员林赛·格雷厄姆（Lindsey Graham）表示支持川普总统的做法。
 </p>
 <p>
  川普和两党议员呼吁参议院批准2,000美元的纾困支票。这个金额高于本周开始发放的600美元纾困金。 但是，米奇·麦康奈尔（Mitch McConnell）和其他共和党人在本届国会结束之前放弃对其进行独立投票的努力。
