--- a/pages/nsc418/n12661914.md
+++ b/pages/nsc418/n12661914.md
@@ -42,14 +42,46 @@
  以下是有关病毒疫情的实时更新：
 </h4>
 <h3>
- 意大利周六新增11,831例感染、364例死亡
+ 俄罗斯为超过80万人接种 并颁发证书
 </h3>
 <p>
- 卫生部说，意大利周六（1月2日）新增364例中共病毒（
- <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
-  武汉肺炎
+ 路透社报导，俄罗斯卫生部长米哈伊尔·穆拉什科（Mikhail Murashko）周六（1月2日）表示，迄今为止，该国已有80万人做了新冠病毒（中共病毒）接种，已发放150万剂疫苗。
+</p>
+<p>
+ 俄罗斯于2020年12月初推出Sputnik V疫苗，目前其COVID-19（中共病毒引发的疾病）病例数量已跃居世界第四，俄罗斯对其计划生产的几种疫苗寄予厚望。
+</p>
+<p>
+ 塔斯社（TASS）援引穆拉什科的话说，从1月1日起，在俄罗斯接种疫苗的人将获得疫苗接种电子证书。该部为已经接种过疫苗的俄罗斯人建立了数据库。
+</p>
+<p>
+ 该疫苗分两次使用，剂量不同，前后两次施打间隔21天。
+</p>
+<p>
+ 俄罗斯已经开始向其它国家提供同一疫苗。该国上周向阿根廷发送了30万剂这种疫苗。这在国内引发争议，有些人认为应向国内提供更多疫苗。
+</p>
+<p>
+ 根据周六的数据，俄罗斯在过去24小时内新增26,301例感染，总病例数达到3,212,637例。
+</p>
+<p>
+ 当局说，过去24小时内有447人死亡，官方的死亡数字达到58,002人。
+</p>
+<h3>
+ 意大利周六新增11,831例感染、364例死亡
+</h3>
+<figure class="wp-caption aligncenter" id="attachment_12662500" style="width: 600px">
+ <ok href="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230372417.jpg">
+  <img alt="" class="size-medium_vertical wp-image-12662500" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230372417-600x400.jpg"/>
  </ok>
- ）相关死亡报告，前一天这一数字为462例；新增感染也从前一天的22,211例下降至11,831例。而新年当天的测试远远低于正常水平。
+ <br/><figcaption class="wp-caption-text">
+  2020年12月31日，中共病毒（
+  <ok href="https://www.epochtimes.com/gb/tag/%E6%AD%A6%E6%B1%89%E8%82%BA%E7%82%8E.html">
+   武汉肺炎
+  </ok>
+  ）大流行之际，意大利圣菲利波内里医院（San Filippo Neri Hospital）的医务人员在病房庆祝新的一年 。(Antonio Masiello/Getty Images)
+ </figcaption><br/>
+</figure><br/>
+<p>
+ 卫生部说，意大利周六（1月2日）新增364例中共病毒（武汉肺炎）相关死亡报告，前一天这一数字为462例；新增感染也从前一天的22,211例下降至11,831例。而新年当天的测试远远低于正常水平。
 </p>
 <p>
  卫生部表示，过去一天仅做了67,174次拭子测试，低于之前的157,524次。
@@ -67,7 +99,7 @@
  第二波疫情于11月上半旬迅速在该国兴起——住院人数每天增加约1,000，而重症监护室每天增加约100人。
 </p>
 <h3>
- 社会学家预测大流行后“咆哮的20年代”
+ 社会学家预测大流行后“20年代”
 </h3>
 <p>
  耶鲁大学教授、社会学家和医师尼古拉斯·克里斯塔基斯（Nicholas Christakis）认为，我们尚未摆脱中共病毒（武汉肺炎）大流行阴影，但即将出现咆哮的“20年代反弹”。
