同步于: 1月4日2时2分

--- a/pages/p5/957947.md
+++ b/pages/p5/957947.md
@@ -1,4 +1,4 @@
-### 澳洲政府敦促中国不要违背习近平承诺
+### 猪肉价格再度逼近最高点 进口冷冻肉背锅(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,26 +6,15 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p>
-  【看中国2020年11月6日讯】随着中方对澳大利亚的报复行动逐步升级，澳中
-  <strong>
-   贸易
-  </strong>
-  正在陷入混乱。
-  <strong>
-   澳大利亚
-  </strong>
-  政府敦促中国不要违背
-  <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/习近平" target="_blank">
-    习近平
+ <p style="text-align: center;">
+  <img alt="猪肉 价格 进口 冷冻肉" src="https://img3.secretchina.com/pic/2020/9-7/p2770801a694574349-ss.jpg"/>
+  <br>
+   猪肉价格再度逼近最高点，官方甩锅进口冷冻肉。（图片来源：STR/AFP via Getty Images）
+   <span id="hideid" name="hideid" style="color:red;display:none;">
+    <span href="https://www.secretchina.com">
+    </span>
    </span>
-  </strong>
-  作出的让全球分享中国市场的公开承诺。
-  <span id="hideid" name="hideid" style="color:red;display:none;">
-   <span href="https://www.secretchina.com">
-   </span>
-  </span>
+  </br>
  </p>
  <div id="txt-mid1-t21-2017">
   
@@ -40,38 +29,49 @@
   </div>
  </div>
  <p>
-  最近多方消息来源显示，中国正在通过多种方法扰乱
-  <span href="https://www.secretchina.com/news/gb/tag/澳大利亚" target="_blank">
-   澳大利亚
-  </span>
-  与中国的正常贸易关系。据报道，中国进口商已经停止向澳大利亚葡萄酒出口商下订单。中国方面传来的消息说，中国海关将从11月6提本周五拒绝对澳大利亚葡萄酒办理验货通关手续。
+  【看中国2021年1月4日讯】（看中国记者丁晓雨综合报导）在经历了短暂的回落之后，
+  <strong>
+   <span href="https://www.secretchina.com/news/gb/tag/猪肉" target="_blank">
+    猪肉
+   </span>
+   价格
+  </strong>
+  再次上涨。据统计数据，猪肉价格已经上涨一个月了，生猪价格从2020年11月底均价29元/公斤上涨到如今的35元/公斤，上涨了6元/公斤。官方称是因为
+  <strong>
+   进口冷冻肉
+  </strong>
+  病毒检测阳性，使得民众只敢购买新鲜肉，拉大了供应缺口。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  澳大利亚龙虾出口商也在与
+  2020年12月份，中国的生猪
+  <span href="https://www.secretchina.com/news/gb/tag/价格" target="_blank">
+   价格
+  </span>
+  再度逼近最高点。
+ </p>
+ <p>
+  据
   <span href="https://www.secretchina.com" target="_blank">
    中国
   </span>
-  方面接洽，希望中国有关当局澄清是否已经对他们的货物做出了禁止进口的决定。
+  养猪网猪价系统数据监测显示，2020年12月31日，全国生猪平均价格为35.67元/公斤，第三次达到生猪价格的最高点。
  </p>
  <p>
-  这个星期，中国第三届国际进口博览会在上海开幕。习近平在开幕式上向全世界承诺，“让中国市场成为世界的市场、共享的市场、大家的市场，为国际社会注入更多正能量。”
+  根据农业农村部数据，2020年2月，生猪价格突破38元/公斤，此后短暂回落；2020年7月，生猪价格再度逼近38元/公斤。这是一年中第三次逼近38元/公斤的大关。
  </p>
  <p>
-  澳大利亚
-  <span href="https://www.secretchina.com/news/gb/tag/贸易" target="_blank">
-   贸易
+  不久前，中国农业农村部刚刚发布信息称，至2020年11月末，全国生猪存栏和能繁母猪存栏均已恢复到常年水平的90%以上。但猪价和肉价还是蹭蹭上涨，到底哪里不对？
+ </p>
+ <p>
+  据《券商中国》报导，2020年，中国国内生猪
+  <span href="https://zh.wikipedia.org/wiki/价格" target="_blank">
+   价格
   </span>
-  部长伯明翰说，澳大利亚出口遭遇到的问题显然与中国发出的信息不一致，也“损害了习近平主席在进博会上讲话的”公信力。
- </p>
- <p>
-  伯明翰在一份声明中指出，“如果中国对其政府的声明是严肃的，那么它就应该让人们相信海鲜和葡萄酒等进口商品也应该享有正常的关税和相关的程序。”
- </p>
- <p>
-  香港英文报纸南华早报周五（11月5日）报道说，中国可能要从下周起对澳大利亚葡萄酒征收高达200%的反倾销关税。这个惩罚性措施一旦落实，南华早报说，澳大利亚葡萄酒将会被踢出中国市场。
+  持续走高，只能依靠大量进口外国冻肉来弥补国内需求。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -86,7 +86,11 @@
   </div>
  </center>
  <p>
-  澳大利亚许多出口商目前无所适从，担心中国当局或许会直接发布禁令，停止进口澳大利亚葡萄酒和其它一些商品。
+  统计显示，截至2020年11月国内正关进口猪肉量在 400 万吨以上，进口国家主要来自欧盟、南美、美国等地。12月份到港的进口量在 10 万吨左右，全年
+  <span href="https://zh.wikipedia.org/zh-hans/豬肉" target="_blank">
+   猪肉
+  </span>
+  进口量在420到430万吨。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -101,7 +105,11 @@
   </div>
  </center>
  <p>
-  总部位于悉尼的澳大利亚葡萄酒出口商兼生产商天鹅酒业集团（Swan Wine Group）首席执行官李伟对事态发展感到不安，他说，他所有的中国客户都已停止下订单。
+  但从2020年11月以来，全国十几个省市地区都在
+  <span href="https://zh.wikipedia.org/wiki/進口" target="_blank">
+   进口
+  </span>
+  冻肉上检测出武汉肺炎病毒。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -116,7 +124,7 @@
   </div>
  </center>
  <p>
-  南华早报引用李伟的话说：“我们真的不认为会达到这个阶段。” “我们非常失望。”
+  2020年11月，北京当局出台有关冷链食品生产经营过程当中的病毒防控消毒技术指南，要求各地对冻品加强检测力度，结果阳性数量明显增加。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -131,7 +139,11 @@
   </div>
  </center>
  <p>
-  “我觉得澳中关系已经到了冰点。我们希望澳大利亚政府能拿出一些可行的策略来重振它。”
+  2020年12月1日，市场监管总局召开加强
+  <span href="https://www.secretchina.com/news/gb/tag/进口" target="_blank">
+   进口
+  </span>
+  冷链食品追溯管理工作电视电话会议，指出“严格进口冷链食品从口岸到境内生产、流通、销售全程防控，没有检验检疫证明、没有核酸检测报告、没有消毒证明、没有追溯信息的，不得上市销售”。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -146,22 +158,7 @@
   </div>
  </center>
  <p>
-  中国商务部在8月份启动了对澳大利亚葡萄酒的反倾销调查。南华早报说，中方如果发现此类“倾销”的证据，将会加征202.7%的关税，这将意味着澳大利亚葡萄酒的价格提高三倍，相当于遭遇到贸易封锁。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  反倾销调查可能会持续一年，但观察人士认为，中方有可能在调查结束前就对澳大利亚葡萄酒采取某种临时性反倾销措施。
+  进口猪肉检测阳性的报告，让民众担忧，转而只购买新鲜猪肉，这使得国内供应缺口进一步拉大，成为推动生猪价格上涨的重要原因。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +177,7 @@
   </ins>
  </center>
  <p>
-  澳大利亚是中国最大的葡萄酒进口国，排名在法国和智利之前。2019年，中国从澳大利亚进口了1.2亿升葡萄酒，比2015年的5600万升增长了两倍多。
+  那么，这波上涨行情会延续到2021年吗？《券商中国〈报导，专家们普遍认为，在不发生重大疫情疫病与重大政策变动的前提下，2021年下半年开始产能释放或加速，猪价或呈现整体下行态势，预计到2021年9月全国生猪价格或在21.5～22.5元/公斤。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -195,7 +192,7 @@
   </div>
  </center>
  <p>
-  南华早报说，中国各地的商务机构都得到了口头指示，从本周星期五开始，各地的进口商都不要再进口澳大利亚的葡萄酒，原因是，他们进口的货物被海关拒收的可能性“很高”。不过，有迹象显示，如果中国进口商提前给相关港口海关部门打了招呼，澳大利亚已经发货的葡萄酒有可能可以通关。
+  新希望六和股份有限公司广东农业产业基金董事长、广东创新中心总经理李维峰表示，相比2020年的天价，没有大的疫情，2021年生猪价格将进入下降通道，2022年则极可能出现低价。而当猪价下降的时候，很多地产等其他行业来投资养猪的企业，中途可能会离场，到2022年不排除有人会半价抛售猪场。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -210,11 +207,7 @@
   </div>
  </center>
  <p>
-  澳中关系自今年4月澳方呼吁国际社会就
-  <span href="https://www.secretchina.com/news/gb/tag/新冠病毒" target="_blank">
-   新冠病毒
-  </span>
-  (又称中共病毒，COVID-19)源头展开独立调查之后就开始恶化。中国先后对澳大利亚的大麦、海鲜、铜矿石、葡萄酒、牛肉、旅游、甚至大学采取了范围广泛的报复措施。这种报复最近明显升级，给双边贸易活动带来了巨大的不确定性。
+  2020年这场冲天的猪价行情，让生猪养殖行业的上市企业赚得盆满钵满，个个都忙着扩大产能，撑大“钱袋子”。电商巨头、房企大佬们几乎一个不拉的纷纷转战养猪行业。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -229,7 +222,7 @@
   </div>
  </center>
  <p>
-  原文标题：澳中贸易陷入混乱，澳政府敦促中国恢复贸易秩序
+  产能扩张增加了生猪供给，但也让外界对于生猪价格的下滑有了更多提前预期。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -243,27 +236,8 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+ <p>
+  但网友们表示，猪价一旦被资本控制，就很难再降下来。“看看各种物品的涨价，就知道通货膨胀来了。”不少网友感叹，吃着世界最贵的猪肉，住着世界最贵的房子，受着世界最贵的教育，“（他们）不是为人民服务的，目标只有一个：钱！”
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -276,6 +250,44 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:静馨
+来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41Cl"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -293,13 +305,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951693.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951693.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/951693.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/11/06/951693.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957947.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957947.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/957947.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/04/957947.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/951693.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/957947.md' width='0px' height='0px'/>
