--- a/pages/nsc413/n12663672.md
+++ b/pages/nsc413/n12663672.md
@@ -5,9 +5,9 @@
 
 
 
-<div><img alt="【疫情更新1.3】沈阳出现超级传染者" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2021/01/GettyImages-1230402370-600x400.jpg"/>
+<div><img alt="【疫情更新1.3】俄亥俄州不强制医护接种疫苗" class="attachment-djy_600_400 size-djy_600_400 wp-post-image" src="https://i.epochtimes.com/assets/uploads/2020/12/2012302043512124-600x400.jpg"/>
 <div class="caption">
- 图为1月2日，民众在沈阳一家测试中心等待检测。(STR/AFP via Getty Images)
+ 图为2020年12月30日，一名美国药剂师正在准备辉瑞中共病毒疫苗。此照为示意图。（BRENDAN SMIALOWSKI/AFP via Getty Images）
 </div></div><hr/>
 
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
